app/ingress/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - hello-world.mydomain.com
    secretName: hello-world-ingress-tls
  rules:
  - host: hello-world.mydomain.com
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-custom
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-custom
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes-custom
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-custom
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-kubernetes-custom
  template:
    metadata:
      labels:
        app: hello-kubernetes-custom
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.7
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 50m
            memory: "50Mi"
          requests:
            cpu: 10m
            memory: "10Mi"
